--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <title>DM Photography</title>
   <link rel="icon" href="logo/logo w.png">
+  <link rel="stylesheet" href="https://use.typekit.net/ljw5pku.css">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="">
+  <meta name="DM Potography" content="professional real estate and interior photography">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -13,10 +14,12 @@
   <link rel="stylesheet" href="css/fontAwesome.css">
   <link rel="stylesheet" href="css/light-box.css">
   <link rel="stylesheet" href="css/templatemo-style.css">
-  <link rel = "stylesheet" type = "text/css"href = "myStyle.css" />
+  <link rel = "stylesheet" type = "text/css"href = "style.css" />
+  <link rel = "stylesheet" type = "text/css"href = "fonts.css" />
   <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-
+  <style> @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+  </style>
 </head>
 <body>
   <!-- Navigation bar -->
@@ -43,51 +46,98 @@
   </div>
 
   <!-- company text and information -->
-
+  <div class="title"><l>L</l>et me help you...</div>
 
   <div class="text">
-Let me help you sell or rent your apartment faster by taking great photos that will make your real estate advert shine and get more views.
+    Let me help you sell or rent your apartment faster by taking great photos that will make your real estate advert shine and get more views.
 
-Using advanced photographic and editing techniques and professional equipment, I can bring out the best of your apartment, house or business.
+    Using advanced photographic and editing techniques and professional equipment, I can bring out the best of your apartment, house or business.
+  </div>
+  <br>
 
-Some of the techniques I offer:
+  <div class="subtitle">Some of the techniques I offer:
+  </div>
 
 
-    <div class="subtext">
 
+  <br>
 
-      <mid> Some of the techniques I work with: </mid>
-      <br>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-4">
-            <small>- Wide angle photography <br>
-              - Panoramic shots <br>
-              - Perspective correction <br>
-            - Remove color casting</small></div>
-            <div class="col-sm-12 col-md-8">
-              <small>- Spot removal <br>
-                - HDR <br>
-                - Image sharpening <br>
-              - Multiple exposures</small>
-            </div>
-            <br>
+  <div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-6 subtext">
+          - Wide angle photography <br>
+          - Panoramic shots <br>
+          - Perspective correction <br>
+          - Remove color castsing
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="subtext">
+            - Spot removal <br>
+            - HDR <br>
+            - Image sharpening <br>
+            - Multiple exposures
           </div>
         </div>
-
-
-
+        <br>
       </div>
-
-
-Real estate photography is a great way to maximize your chances of selling or renting out your apartment or house by making your advert the star of the show. Get the most visits with professional photos that make your advert stand out from the usual crowd of boring snaps taken with a mobile phone.
-
-Contact me using the e-mail form below for a quote.
     </div>
+  </div>
 
-    <!-- gallery carousel up -->
 
+  <div class="text">Real estate photography is a great way to maximize your chances of selling or renting out your apartment or house by making your advert the star of the show. Get the most visits with professional photos that make your advert stand out from the usual crowd of boring snaps taken with a mobile phone.
+
+  Contact me using the e-mail form below for a quote.</div>
+</div>
+
+<!-- gallery carousel up -->
+
+<div class="full-screen-portfolio" id="portfolio">
+  <div class="container-fluid">
+    <div class="col-md-4 col-sm-6">
+      <div class="portfolio-item">
+        <a href="photos/1.jpg" data-lightbox="image-1"><div class="thumb">
+          <div class="hover-effect">
+            <div class="hover-content">
+              <h1>Ana's living room in Rome</h1>
+              <p>Bright and spacious living room, ready to enjoy</p>
+            </div>
+          </div>
+          <div class="image">
+            <img src="photos/1.jpg">
+          </div>
+        </div></a>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-6">
+      <div class="portfolio-item">
+        <a href="photos/2.jpg" data-lightbox="image-1"><div class="thumb">
+          <div class="hover-effect">
+            <div class="hover-content">
+              <h1>Ana's living room in Rome</h1>
+              <p>Bright and spacious living room, ready to enjoy</p>
+            </div>
+          </div>
+          <div class="image">
+            <img src="photos/2.jpg">
+          </div>
+        </div></a>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-6">
+      <div class="portfolio-item">
+        <a href="photos/3.jpg" data-lightbox="image-1"><div class="thumb">
+          <div class="hover-effect">
+            <div class="hover-content">
+              <h1>Bright and modern kitchen in Barcelona</h1>
+              <p>Perfect to enjoy someone's company while you prepare a meal</p>
+            </div>
+          </div>
+          <div class="image">
+            <img src="photos/3.jpg">
+          </div>
+        </div></a>
+      </div>
+    </div>
     <div class="full-screen-portfolio" id="portfolio">
       <div class="container-fluid">
         <div class="col-md-4 col-sm-6">
@@ -135,120 +185,73 @@ Contact me using the e-mail form below for a quote.
             </div></a>
           </div>
         </div>
-        <div class="full-screen-portfolio" id="portfolio">
+
+        <footer>
           <div class="container-fluid">
-            <div class="col-md-4 col-sm-6">
-              <div class="portfolio-item">
-                <a href="photos/1.jpg" data-lightbox="image-1"><div class="thumb">
-                  <div class="hover-effect">
-                    <div class="hover-content">
-                      <h1>Ana's living room in Rome</h1>
-                      <p>Bright and spacious living room, ready to enjoy</p>
-                    </div>
-                  </div>
-                  <div class="image">
-                    <img src="photos/1.jpg">
-                  </div>
-                </div></a>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-              <div class="portfolio-item">
-                <a href="photos/2.jpg" data-lightbox="image-1"><div class="thumb">
-                  <div class="hover-effect">
-                    <div class="hover-content">
-                      <h1>Ana's living room in Rome</h1>
-                      <p>Bright and spacious living room, ready to enjoy</p>
-                    </div>
-                  </div>
-                  <div class="image">
-                    <img src="photos/2.jpg">
-                  </div>
-                </div></a>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-              <div class="portfolio-item">
-                <a href="photos/3.jpg" data-lightbox="image-1"><div class="thumb">
-                  <div class="hover-effect">
-                    <div class="hover-content">
-                      <h1>Bright and modern kitchen in Barcelona</h1>
-                      <p>Perfect to enjoy someone's company while you prepare a meal</p>
-                    </div>
-                  </div>
-                  <div class="image">
-                    <img src="photos/3.jpg">
-                  </div>
-                </div></a>
-              </div>
-            </div>
+            <div class="col-md-12">
+              <p>Copyright &copy; 2018 Company Name
 
-            <footer>
-              <div class="container-fluid">
-                <div class="col-md-12">
-                  <p>Copyright &copy; 2018 Company Name
+              | Designed by TemplateMo</p>
+            </div>
+          </div>
+          </footer
 
-                  | Designed by TemplateMo</p>
+
+          <!-- Modal button -->
+          <div class="popup-icon">
+            <button id="modBtn" class="modal-btn"><img src="img/contact-icon.png" alt=""></button>
+          </div>
+
+          <!-- Modal -->
+          <div id="modal" class="modal">
+            <!-- Modal Content -->
+            <div class="modal-content">
+              <!-- Modal Header -->
+              <div class="modal-header">
+                <h3 class="header-title">Say hello to <em>Highway</em></h3>
+                <div class="close-btn"><img src="img/close_contact.png" alt=""></div>
+              </div>
+              <!-- Modal Body -->
+              <div class="modal-body">
+                <div class="col-md-6 col-md-offset-3">
+                  <form id="contact" action="" method="post">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <fieldset>
+                          <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
+                        </fieldset>
+                      </div>
+                      <div class="col-md-12">
+                        <fieldset>
+                          <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
+                        </fieldset>
+                      </div>
+                      <div class="col-md-12">
+                        <fieldset>
+                          <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
+                        </fieldset>
+                      </div>
+                      <div class="col-md-12">
+                        <fieldset>
+                          <button type="submit" id="form-submit" class="btn">Send Message Now</button>
+                        </fieldset>
+                      </div>
+                    </div>
+                  </form>
                 </div>
               </div>
-              </footer
-
-
-              <!-- Modal button -->
-              <div class="popup-icon">
-                <button id="modBtn" class="modal-btn"><img src="img/contact-icon.png" alt=""></button>
-              </div>
-
-              <!-- Modal -->
-              <div id="modal" class="modal">
-                <!-- Modal Content -->
-                <div class="modal-content">
-                  <!-- Modal Header -->
-                  <div class="modal-header">
-                    <h3 class="header-title">Say hello to <em>Highway</em></h3>
-                    <div class="close-btn"><img src="img/close_contact.png" alt=""></div>
-                  </div>
-                  <!-- Modal Body -->
-                  <div class="modal-body">
-                    <div class="col-md-6 col-md-offset-3">
-                      <form id="contact" action="" method="post">
-                        <div class="row">
-                          <div class="col-md-12">
-                            <fieldset>
-                              <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
-                            </fieldset>
-                          </div>
-                          <div class="col-md-12">
-                            <fieldset>
-                              <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
-                            </fieldset>
-                          </div>
-                          <div class="col-md-12">
-                            <fieldset>
-                              <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
-                            </fieldset>
-                          </div>
-                          <div class="col-md-12">
-                            <fieldset>
-                              <button type="submit" id="form-submit" class="btn">Send Message Now</button>
-                            </fieldset>
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
+            </div>
+          </div>
 
 
 
 
 
-              <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-              <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+          <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-              <script src="js/vendor/bootstrap.min.js"></script>
+          <script src="js/vendor/bootstrap.min.js"></script>
 
-              <script src="js/plugins.js"></script>
-              <script src="js/main.js"></script>    </body>
-              </html>
+          <script src="js/plugins.js"></script>
+          <script src="js/main.js"></script>    </body>
+          </html>
