--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
         </div>
       </div>
-      <img class="backphoto" src="background/1.jpg"alt="photos/2">
+      <img class="backphoto" src="background/3.jpg"alt="photos/2">
     </div>
   </div>
 
@@ -92,100 +92,145 @@
 <!-- gallery carousel up -->
 
 <div class="full-screen-portfolio" id="portfolio">
-  <div class="container-fluid">
-    <div class="col-md-4 col-sm-6">
-      <div class="portfolio-item">
-        <a href="photos/1.jpg" data-lightbox="image-1"><div class="thumb">
-          <div class="hover-effect">
-            <div class="hover-content">
-              <h1>Ana's living room in Rome</h1>
-              <p>Bright and spacious living room, ready to enjoy</p>
-            </div>
-          </div>
-          <div class="image">
-            <img src="photos/1.jpg">
-          </div>
-        </div></a>
-      </div>
-    </div>
-    <div class="col-md-4 col-sm-6">
-      <div class="portfolio-item">
-        <a href="photos/2.jpg" data-lightbox="image-1"><div class="thumb">
-          <div class="hover-effect">
-            <div class="hover-content">
-              <h1>Ana's living room in Rome</h1>
-              <p>Bright and spacious living room, ready to enjoy</p>
-            </div>
-          </div>
-          <div class="image">
-            <img src="photos/2.jpg">
-          </div>
-        </div></a>
-      </div>
-    </div>
-    <div class="col-md-4 col-sm-6">
-      <div class="portfolio-item">
-        <a href="photos/3.jpg" data-lightbox="image-1"><div class="thumb">
-          <div class="hover-effect">
-            <div class="hover-content">
-              <h1>Bright and modern kitchen in Barcelona</h1>
-              <p>Perfect to enjoy someone's company while you prepare a meal</p>
-            </div>
-          </div>
-          <div class="image">
-            <img src="photos/3.jpg">
-          </div>
-        </div></a>
-      </div>
-    </div>
-    <div class="full-screen-portfolio" id="portfolio">
-      <div class="container-fluid">
-        <div class="col-md-4 col-sm-6">
-          <div class="portfolio-item">
-            <a href="photos/1.jpg" data-lightbox="image-1"><div class="thumb">
-              <div class="hover-effect">
-                <div class="hover-content">
-                  <h1>Ana's living room in Rome</h1>
-                  <p>Bright and spacious living room, ready to enjoy</p>
+        <div class="container-fluid">
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item">
+                    <a href="photos/2.jpg" data-lightbox="image-1"><div class="thumb">
+                        <div class="hover-effect">
+                            <div class="hover-content">
+                                <h1>Biodiesel <em>squid</em></h1>
+                                <p>Awesome Subtittle Goes Here</p>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="photos/2.jpg">
+                        </div>
+                    </div></a>
                 </div>
-              </div>
-              <div class="image">
-                <img src="photos/1.jpg">
-              </div>
-            </div></a>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <div class="portfolio-item">
-            <a href="photos/2.jpg" data-lightbox="image-1"><div class="thumb">
-              <div class="hover-effect">
-                <div class="hover-content">
-                  <h1>Ana's living room in Rome</h1>
-                  <p>Bright and spacious living room, ready to enjoy</p>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item">
+                    <a href="photos/12.jpg"
+                     data-lightbox="image-1"><div class="thumb">
+                        <div class="hover-effect">
+                            <div class="hover-content">
+                                <h1>raclette <em>taxidermy</em></h1>
+                                <p>Awesome Subtittle Goes Here</p>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="photos/12.jpg">
+                        </div>
+                    </div></a>
                 </div>
-              </div>
-              <div class="image">
-                <img src="photos/2.jpg">
-              </div>
-            </div></a>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <div class="portfolio-item">
-            <a href="photos/3.jpg" data-lightbox="image-1"><div class="thumb">
-              <div class="hover-effect">
-                <div class="hover-content">
-                  <h1>Bright and modern kitchen in Barcelona</h1>
-                  <p>Perfect to enjoy someone's company while you prepare a meal</p>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item">
+                    <a href="photos/4.jpg" data-lightbox="image-1"><div class="thumb">
+                        <div class="hover-effect">
+                            <div class="hover-content">
+                                <h1>humblebrag <em>brunch</em></h1>
+                                <p>Awesome Subtittle Goes Here</p>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="photos/4.jpg">
+                        </div>
+                    </div></a>
                 </div>
-              </div>
-              <div class="image">
-                <img src="photos/3.jpg">
-              </div>
-            </div></a>
-          </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item">
+                    <a href="photos/5.jpg" data-lightbox="image-1"><div class="thumb">
+                        <div class="hover-effect">
+                            <div class="hover-content">
+                                <h1>Succulents <em>chambray</em></h1>
+                                <p>Awesome Subtittle Goes Here</p>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="photos/5.jpg">
+                        </div>
+                    </div></a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item">
+                    <a href="photos/9.jpg" data-lightbox="image-1"><div class="thumb">
+                        <div class="hover-effect">
+                            <div class="hover-content">
+                                <h1>freegan <em>aesthetic</em></h1>
+                                <p>Awesome Subtittle Goes Here</p>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="photos/9.jpg">
+                        </div>
+                    </div></a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item">
+                    <a href="photos/6.jpg" data-lightbox="image-1"><div class="thumb">
+                        <div class="hover-effect">
+                            <div class="hover-content">
+                                <h1>taiyaki <em>vegan</em></h1>
+                                <p>Awesome Subtittle Goes Here</p>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="photos/6.jpg">
+                        </div>
+                    </div></a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item">
+                    <a href="photos/11.jpg" data-lightbox="image-1"><div class="thumb">
+                        <div class="hover-effect">
+                            <div class="hover-content">
+                                <h1>Thundercats <em>santo</em></h1>
+                                <p>Awesome Subtittle Goes Here</p>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="photos/11.jpg">
+                        </div>
+                    </div></a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item">
+                    <a href="photos/8.jpg" data-lightbox="image-1"><div class="thumb">
+                        <div class="hover-effect">
+                            <div class="hover-content">
+                                <h1>wayfarers <em>yuccie</em></h1>
+                                <p>Awesome Subtittle Goes Here</p>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="photos/8.jpg">
+                        </div>
+                    </div></a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+              <div class="portfolio-item">
+                  <a href="photos/10.jpg" data-lightbox="image-1"><div class="thumb">
+                        <div class="hover-effect">
+                            <div class="hover-content">
+                                <h1>disrupt <em>street</em></h1>
+                                <p>Awesome Subtittle Goes Here</p>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="photos/10.jpg">
+                        </div>
+                    </div></a>
+                </div>
+            </div>
         </div>
-
+    </div>
         <footer>
           <div class="container-fluid">
             <div class="col-md-12">
